--- a/turmas.html
+++ b/turmas.html
@@ -398,6 +398,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="turmas" class="section level1 unnumbered hasAnchor">
 <h1>Turmas<a href="turmas.html#turmas" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><strong>Turma 1: ENBT/JBRJ: 24 a 28 de outubro de 2022</strong></p>
+<p><img src="images/turma1.jpg" /></p>
 </div>
             </section>
 
