--- a/prêambulo.html
+++ b/prêambulo.html
@@ -277,30 +277,31 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html"><i class="fa fa-check"></i><b>14</b> Introdução ao R</a>
 <ul>
 <li class="chapter" data-level="14.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#programação-orientada-a-objetos"><i class="fa fa-check"></i><b>14.1</b> Programação orientada a objetos</a></li>
-<li class="chapter" data-level="14.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#principais-tipos-de-objetos"><i class="fa fa-check"></i><b>14.2</b> Principais tipos de Objetos:</a></li>
-<li class="chapter" data-level="14.3" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#classe"><i class="fa fa-check"></i><b>14.3</b> Classe</a>
+<li class="chapter" data-level="14.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#principais-estruturas-de-dados"><i class="fa fa-check"></i><b>14.2</b> Principais estruturas de dados</a></li>
+<li class="chapter" data-level="14.3" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#principais-tipos-de-dados"><i class="fa fa-check"></i><b>14.3</b> Principais tipos de dados</a></li>
+<li class="chapter" data-level="14.4" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#classe"><i class="fa fa-check"></i><b>14.4</b> Classe</a>
 <ul>
-<li class="chapter" data-level="14.3.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#sistema-de-referência"><i class="fa fa-check"></i><b>14.3.1</b> Sistema de referência</a></li>
+<li class="chapter" data-level="14.4.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#sistema-de-referência"><i class="fa fa-check"></i><b>14.4.1</b> Sistema de referência</a></li>
 </ul></li>
-<li class="chapter" data-level="14.4" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#linguagem-r"><i class="fa fa-check"></i><b>14.4</b> Linguagem R</a></li>
-<li class="chapter" data-level="14.5" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#console"><i class="fa fa-check"></i><b>14.5</b> Console</a></li>
-<li class="chapter" data-level="14.6" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#criando-objetos"><i class="fa fa-check"></i><b>14.6</b> Criando objetos</a></li>
-<li class="chapter" data-level="14.7" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#funções"><i class="fa fa-check"></i><b>14.7</b> Funções</a>
+<li class="chapter" data-level="14.5" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#linguagem-r"><i class="fa fa-check"></i><b>14.5</b> Linguagem R</a></li>
+<li class="chapter" data-level="14.6" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#console"><i class="fa fa-check"></i><b>14.6</b> Console</a></li>
+<li class="chapter" data-level="14.7" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#criando-objetos"><i class="fa fa-check"></i><b>14.7</b> Criando objetos</a></li>
+<li class="chapter" data-level="14.8" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#funções"><i class="fa fa-check"></i><b>14.8</b> Funções</a>
 <ul>
-<li class="chapter" data-level="14.7.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#sintaxe-da-função"><i class="fa fa-check"></i><b>14.7.1</b> Sintaxe da função</a></li>
-<li class="chapter" data-level="14.7.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#funções-básicas"><i class="fa fa-check"></i><b>14.7.2</b> Funções básicas</a></li>
+<li class="chapter" data-level="14.8.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#sintaxe-da-função"><i class="fa fa-check"></i><b>14.8.1</b> Sintaxe da função</a></li>
+<li class="chapter" data-level="14.8.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#funções-básicas"><i class="fa fa-check"></i><b>14.8.2</b> Funções básicas</a></li>
 </ul></li>
-<li class="chapter" data-level="14.8" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#pacotes"><i class="fa fa-check"></i><b>14.8</b> Pacotes</a></li>
-<li class="chapter" data-level="14.9" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#prática-8"><i class="fa fa-check"></i><b>14.9</b> Prática</a>
+<li class="chapter" data-level="14.9" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#pacotes"><i class="fa fa-check"></i><b>14.9</b> Pacotes</a></li>
+<li class="chapter" data-level="14.10" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#prática-8"><i class="fa fa-check"></i><b>14.10</b> Prática</a>
 <ul>
-<li class="chapter" data-level="14.9.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#indexação-de-objetos"><i class="fa fa-check"></i><b>14.9.1</b> Indexação de objetos</a></li>
-<li class="chapter" data-level="14.9.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#operadores-de-lógica"><i class="fa fa-check"></i><b>14.9.2</b> Operadores de lógica</a></li>
-<li class="chapter" data-level="14.9.3" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#inspecionando-os-atributos-um-objeto"><i class="fa fa-check"></i><b>14.9.3</b> Inspecionando os atributos um objeto</a></li>
-<li class="chapter" data-level="14.9.4" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#teste-e-coerção-de-objetos"><i class="fa fa-check"></i><b>14.9.4</b> Teste e Coerção de objetos</a></li>
+<li class="chapter" data-level="14.10.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#indexação-de-objetos"><i class="fa fa-check"></i><b>14.10.1</b> Indexação de objetos</a></li>
+<li class="chapter" data-level="14.10.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#operadores-de-lógica"><i class="fa fa-check"></i><b>14.10.2</b> Operadores de lógica</a></li>
+<li class="chapter" data-level="14.10.3" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#inspecionando-os-atributos-um-objeto"><i class="fa fa-check"></i><b>14.10.3</b> Inspecionando os atributos um objeto</a></li>
+<li class="chapter" data-level="14.10.4" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#teste-e-coerção-de-objetos"><i class="fa fa-check"></i><b>14.10.4</b> Teste e Coerção de objetos</a></li>
 </ul></li>
-<li class="chapter" data-level="14.10" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#rstudio"><i class="fa fa-check"></i><b>14.10</b> RStudio</a></li>
-<li class="chapter" data-level="14.11" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#ambiente-de-trabalho"><i class="fa fa-check"></i><b>14.11</b> Ambiente de Trabalho</a></li>
-<li class="chapter" data-level="14.12" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#diretório-de-trabalho"><i class="fa fa-check"></i><b>14.12</b> Diretório de Trabalho</a></li>
+<li class="chapter" data-level="14.11" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#rstudio"><i class="fa fa-check"></i><b>14.11</b> RStudio</a></li>
+<li class="chapter" data-level="14.12" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#ambiente-de-trabalho"><i class="fa fa-check"></i><b>14.12</b> Ambiente de Trabalho</a></li>
+<li class="chapter" data-level="14.13" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#diretório-de-trabalho"><i class="fa fa-check"></i><b>14.13</b> Diretório de Trabalho</a></li>
 </ul></li>
 <li class="chapter" data-level="15" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html"><i class="fa fa-check"></i><b>15</b> Filogenia no R</a>
 <ul>
@@ -398,7 +399,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Introdução à Filoinformática (<em>in development</em>)</h1>
 <p class="author"><em>Lucas S.B. Jordão</em></p>
-<p class="date"><em>28/10/2022</em></p>
+<p class="date"><em>29/10/2022</em></p>
 </div>
 <div id="prêambulo" class="section level1 unnumbered hasAnchor">
 <h1>Prêambulo<a href="prêambulo.html#prêambulo" class="anchor-section" aria-label="Anchor link to header"></a></h1>
