--- a/visão-geral-e-roteiro-do-curso.html
+++ b/visão-geral-e-roteiro-do-curso.html
@@ -376,12 +376,9 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="18.7.2.6" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#phylo.to.map"><i class="fa fa-check"></i><b>18.7.2.6</b> Phylo.to.map</a></li>
 <li class="chapter" data-level="18.7.2.7" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#escala-estratigráfica"><i class="fa fa-check"></i><b>18.7.2.7</b> Escala estratigráfica</a></li>
 </ul></li>
-<li class="chapter" data-level="18.7.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#estimação-do-estado-ancestral-usando-r"><i class="fa fa-check"></i><b>18.7.3</b> Estimação do estado ancestral usando R</a>
-<ul>
-<li class="chapter" data-level="18.7.3.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools-3"><i class="fa fa-check"></i><b>18.7.3.1</b> Pacote phytools</a></li>
 </ul></li>
 </ul></li>
-</ul></li>
+<li class="chapter" data-level="19" data-path="rmarkdown.html"><a href="rmarkdown.html"><i class="fa fa-check"></i><b>19</b> RMarkdown</a></li>
 <li class="chapter" data-level="" data-path="referências.html"><a href="referências.html"><i class="fa fa-check"></i>Referências</a></li>
 <li class="chapter" data-level="" data-path="turmas.html"><a href="turmas.html"><i class="fa fa-check"></i>Turmas</a></li>
 </ul>
@@ -407,12 +404,11 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <p>Quanto aos métodos de inferência filogenética, rodaremos análises de máxima verossimilhança e bayesiana. Não rodaremos análises de parsimônia, uma vez que o enfoque do curso será nos dados moleculares. Atualmente, há um senso comum de que ambas as análises, de máxima verossimilhança e bayesiana, são mais apropriadas do que a máxima parsimônia quando se tratam de dados moleculares (genotípicos). Não obstante, a análise de parsimônia continua a ser uma abordagem importante quando os dados são de natureza fenotípica (por exemplo, morfológicos).</p>
 <p>Iniciaremos nossas atividades com a etapa de montagem de sequências, onde aprenderemos a montar uma sequência consenso a partir dos <em>primers</em> sequenciados.</p>
 <p>Em seguida, realizaremos o alinhamento múltiplo e manual das sequências, onde construiremos a matriz com os dados moleculares.</p>
-<p>Posteriormente, aprenderemos o básico sobre o terminal (ou console ou <em>shell</em>) do Windows - <code>MS-DOS</code>, conhecimentos que serão essenciais utilizar aplicativos com interface de linha de comando (CLI, em inglês) e para procederemos as análises filogenéticas.</p>
-<p>As análises filogenéticas serão rodadas com dados moleculares, morfológicos, e a análise combinada, incluindo ambos. Utilizaremos os programas <code>IQ-TREE</code> para máxima verossimilhança e o <code>MrBayes</code> para bayesiana.</p>
+<p>Aprenderemos a baixar sequências do <em>Genbank</em> e a editar os principais tipos de arquivos que armazenam dados filogenéticos. Para isso, faremos uso das expressões regulares através de um editor de texto plano.</p>
+<p>Aprenderemos o básico sobre o terminal (ou console ou <em>shell</em>) do Windows - <code>MS-DOS</code>, conhecimentos que serão essenciais utilizar aplicativos com interface de linha de comando (CLI, em inglês) e para procederemos as análises filogenéticas.</p>
+<p>As análises filogenéticas serão rodadas com dados moleculares. Utilizaremos os programas <code>IQ-TREE</code> para máxima verossimilhança, e <code>MrBayes</code> e <code>Beast2</code> para bayesiana.</p>
 <p>Então, aprenderemos o básico sobre o <svg aria-hidden="true" role="img" viewBox="0 0 581 512" style="height:1em;width:1.13em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:steelblue;overflow:visible;position:relative;"><path d="M581 226.6C581 119.1 450.9 32 290.5 32S0 119.1 0 226.6C0 322.4 103.3 402 239.4 418.1V480h99.1v-61.5c24.3-2.7 47.6-7.4 69.4-13.9L448 480h112l-67.4-113.7c54.5-35.4 88.4-84.9 88.4-139.7zm-466.8 14.5c0-73.5 98.9-133 220.8-133s211.9 40.7 211.9 133c0 50.1-26.5 85-70.3 106.4-2.4-1.6-4.7-2.9-6.4-3.7-10.2-5.2-27.8-10.5-27.8-10.5s86.6-6.4 86.6-92.7-90.6-87.9-90.6-87.9h-199V361c-74.1-21.5-125.2-67.1-125.2-119.9zm225.1 38.3v-55.6c57.8 0 87.8-6.8 87.8 27.3 0 36.5-38.2 28.3-87.8 28.3zm-.9 72.5H365c10.8 0 18.9 11.7 24 19.2-16.1 1.9-33 2.8-50.6 2.9v-22.1z"/></svg> para apresentarmos os principais pacotes desenvolvidos para análises filogenéticas e afins. Uma grande atenção será dada à edição de árvores filogenéticas através de três pacotes (<code>ape</code>, <code>phytools</code>, <code>ggtree</code>).</p>
-<p>Logo, aprenderemos a executar estimações do estado ancestral com dados contínuos e discretos utilizando o pacote <code>phytools</code>.</p>
-<p>Também executaremos uma análise de diversificação utilizando o programa <code>BAMMtools</code> para investigar mudanças nos regimes de diversificação.</p>
-<p>Finalmente, conheceremos o programa <code>Biodiverse GUI</code>, que realiza diversos tipos de análises que incluem a conjunção de árvore filogenética e coordenadas geográficas dos terminais, dentre as quais inclui-se a métrica de diversidade filogenética.</p>
+<p>Finalmente, uma introdução ao <code>RMarkdown</code> para redação da documentação e apresentação dos códigos encerra o curso de introdução à filoinformática.</p>
 </div>
             </section>
 
