--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
 <script src="libs/phylocanvas-quickstart-2.8.1/phylocanvas-quickstart.js"></script>
 <script src="libs/phylocanvas-binding-0.1.3/phylocanvas.js"></script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6RVCVSD60P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6RVCVSD60P');
+</script>
 
 <style type="text/css">
 pre > code.sourceCode { white-space: pre; position: relative; }
